week4/istio/apps/istio-example/demo.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: targaryen-gateway
spec:
   selector:
     istio: ingressgateway
   servers:
   - hosts:
     - agile-devops.club
     port:
       name: https
       number: 443
       protocol: HTTPS
     tls:
       credentialName: cert-ssl
       mode: SIMPLE
       privateKey: sds
       serverCertificate: sds
   - hosts:
     - agile-devops.club
     port:
       name: http
       number: 80
       protocol: HTTP
