week4/istio/apps/istio-example/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: targaryen-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - agile-devops.club
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      credentialName: ingress-cert
      mode: SIMPLE
      privateKey: sds
      serverCertificate: sds
