week4/istio/apps/istio-example/vs-canary.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: senai-virtualservice
spec:
  gateways:
    - targaryen-gateway.istio-system.svc.cluster.local
  hosts:
    - demo-istio.senai.com.br
  http:
    - match:
        - uri:
            prefix: /xapi
      route:
        - destination:
            host: xapi
            port:
              number: 5000
            subset: man
          weight: 100
        - destination:
            host: xapi
            port:
              number: 5000
            subset: girl
          weight: 0
