week4/istio/apps/istio-example/vservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo-sena
spec:
  gateways:
    - targaryen-gateway.demo.svc.cluster.local
  hosts:
    - demo-istio.senai.com.br
  http:
    - match:
        - uri:
            prefix: /xapi
      route:
        - destination:
            host: xapi
            port:
              number: 5000
